--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "type": "project",
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "phpstan/phpstan": "^0.12.2"
+    "phpunit/phpunit": "^8.5"
   },
   "authors": [
     {
